Updating form-container padding to fix header spacing

--- a/assets/stylesheets/trial.scss
+++ b/assets/stylesheets/trial.scss
@@ -5,12 +5,13 @@
   margin-top: 0 !important;
  .form-container {
     margin-top: 3rem;
+    padding: 1rem;
   }
   h1 {
     font-size: 1.25rem;
     border-bottom: 1px solid #dee2e6;
-    padding-bottom: .75rem;
     margin-bottom: 1rem;
+    padding-bottom: 1rem;
   }
 
   form {
